--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Solid App</title>
+    
+    <title>Milwaukee SEO Company & Experts | Wisconsin Search Authority</title>
+    
+    <meta name="description" content="Partner with the premier Milwaukee SEO company. Our experts deliver data-driven search engine optimization for businesses in Milwaukee, Madison, and throughout Wisconsin to increase traffic, leads, and revenue.">
+   
+    <meta name="keywords" content="Milwaukee SEO company, Milwaukee SEO experts, Wisconsin SEO, SEO services Milwaukee, Madison SEO, Green Bay SEO, Search Engine Optimization Wisconsin">
+    <link rel="canonical" href="https://targetedwebtraffic.com/seo-services/milwaukee-seo-company/">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
